@@ -6,6 +6,8 @@ Revelation changelog
 
 	* bumped version number to 0.4.6
 
+	* minor improvements to password generator
+
 2006-01-21  Erik Grinaker <erikg@codepoet.no>
 
 	* use icons instead of colors in password entries to indicate
